--- a/.github/workflows/daily_automation.yml
+++ b/.github/workflows/daily_automation.yml
@@ -34,6 +34,9 @@ jobs:
           python daily_question.py --mode $MODE
 
   deploy-interface:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     needs: run-logic
     steps:
@@ -66,3 +69,4 @@ jobs:
         with:
           path: '.'
       - uses: actions/deploy-pages@v4
+        id: deployment
